user connect/disconnect noted

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Chatter</title>
+    <title>OpenSock</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -41,6 +41,10 @@
         $('#m').val('');
         return false;
       });
+
+	  socket.on('connect', () => {
+		 socket.emit('message', 'user connected');
+	  });
 
       socket.on('message', (msg) => {
         $('#messages').append($('<li>').text(msg));
