formatted css, removed font

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <style>
-		@font-face {
-		    font-family: Proxima Nova;
-		    src: url(fonts/ProximaNovaThin.otf);
-		    font-weight: 100;
-		}
-      form { padding: 20px; position: fixed; bottom: 0; width: 100%; padding-right: 50px;}
-      #messages { list-style-type: none; margin: 0; padding: 0; width: 100%;}
-      #messages li { padding: 5px 10px; font-family: Proxima Nova; font-weight: 100;}
-      #messages li:nth-child(odd) { background: #eee;}
+        form {
+            padding: 20px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            padding-right: 50px;
+        }
+
+        #messages {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+        }
+
+        #messages li {
+            padding: 5px 10px;
+        }
+
+        #messages li:nth-child(odd) {
+            background: #eee;
+        }
     </style>
   </head>
   <body>
